--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     /* box-sizing: border-box; */
 }
 
@@ -9,13 +9,19 @@ header {
     margin: 0;
 }
 
-header > img {
+#header-logo-container {
+    display: block;
+    width: 100%;
+    height: 35vh
+}
+
+#logo {
+    margin-left: auto;
+    margin-right: auto;
     height: 30vh;
-    margin: 20px;
 }
 
 nav {
-    width: 100vw;
     margin: 0;
 }
 
@@ -29,11 +35,28 @@ select {
 }
 
 
-#show-all > button {
-    display: block
+#show-all {
+    display: grid;
+    background-color: #f9f6e5;
+    align-content: space-around;
+}
+
+#menus-containers {
+    display: grid;
+}
+
+#display-animals-here {
+    margin: 1px;
+    justify-content: space-around;
+    text-align: center;
+}
+
+#display-animals-here > li {
+    width: 70vw;
+    list-style: none;
 }
 
 footer {
-    margin-top: 20px;
-    width: 100vw;
+    color: #075663;
+    padding: 10px;
 }
