partway through function to create new card when an animal and outfit are linked

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ select {
     margin: 1px;
     justify-self: center;
     text-align: center;
+    padding-bottom: 20px
 }
 
 #display-animals-here > li {
